--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         }
     ],
     "minimum-stability": "dev",
+    "prefer-stable": true,
     "scripts": {
         "drupal-scaffold": "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
         "post-install-cmd": "./vendor/bin/run drupal:site-setup",
@@ -35,7 +36,11 @@
     "extra": {
         "composer-exit-on-patch-failure": true,
         "enable-patching": true,
-        "patches": {},
+        "patches": {
+            "drupal/core": {
+                "https://www.drupal.org/project/drupal/issues/2943172": "https://www.drupal.org/files/issues/2018-07-05/2943172-kernel-test-base-3.patch"
+            }
+        },
         "installer-paths": {
             "build/core": ["type:drupal-core"],
             "build/modules/contrib/{$name}": ["type:drupal-module"],
@@ -45,5 +50,15 @@
     },
     "config": {
         "sort-packages": true
+    },
+    "autoload": {
+        "psr-4": {
+            "Drupal\\commerce_bpost\\": "./src"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Drupal\\Tests\\commerce_bpost\\": "./tests/src"
+        }
     }
 }
