--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -4,7 +4,7 @@
     <ini name="error_reporting" value="32767"/>
     <ini name="memory_limit" value="-1"/>
     <env name="SIMPLETEST_BASE_URL" value="${drupal.base_url}"/>
-    <env name="SIMPLETEST_IGNORE_DIRECTORIES" value="${drupal.root}"/>
+    <env name="SIMPLETEST_IGNORE_DIRECTORIES" value="vendor,${drupal.root}"/>
     <env name="SIMPLETEST_DB" value="mysql://${drupal.database.user}:${drupal.database.password}@${drupal.database.host}:${drupal.database.port}/${drupal.database.name}"/>
     <env name="MINK_DRIVER_ARGS_WEBDRIVER" value='["${selenium.browser}", null, "${selenium.host}:${selenium.port}/wd/hub"]'/>
   </php>
@@ -14,12 +14,15 @@
     </testsuite>
     <testsuite name="kernel">
       <directory>./tests/</directory>
+      <directory>./modules/*/tests/</directory>
     </testsuite>
     <testsuite name="functional">
       <directory>./tests/</directory>
+      <directory>./modules/*/tests/</directory>
     </testsuite>
     <testsuite name="functional-javascript">
       <directory>./tests/</directory>
+      <directory>./modules/*/tests/</directory>
     </testsuite>
   </testsuites>
 </phpunit>
