--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "drupal/devel_entity_updates": "3.x-dev",
         "drupal/leaflet": "^2.1",
         "drush/drush": "^10",
-        "openeuropa/task-runner": "~1.0-beta2"
+        "openeuropa/task-runner": "~1.0-beta2",
+        "phpspec/prophecy-phpunit": "^2.0",
+        "weitzman/drupal-test-traits": "dev-master"
     },
     "repositories": [
         {
@@ -39,6 +41,12 @@
         "patches": {
             "drupal/core": {
                 "https://www.drupal.org/project/drupal/issues/2943172": "https://www.drupal.org/files/issues/2018-07-05/2943172-kernel-test-base-3.patch"
+            },
+            "drupal/commerce": {
+                "https://www.drupal.org/project/commerce/issues/3135550": "https://www.drupal.org/files/issues/2020-11-12/3135550-12-experiment.patch"
+            },
+            "weitzman/drupal-test-traits": {
+                "Ignore directories when looking for extensions": "https://gitlab.com/weitzman/drupal-test-traits/-/merge_requests/90.diff"
             }
         },
         "installer-paths": {
