--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit bootstrap="${drupal.root}/core/tests/bootstrap.php" backupGlobals="true" colors="true" cacheResult="false">
+<phpunit bootstrap="vendor/weitzman/drupal-test-traits/src/bootstrap.php" backupGlobals="true" colors="true" cacheResult="false">
   <php>
     <ini name="error_reporting" value="32767"/>
     <ini name="memory_limit" value="-1"/>
@@ -7,6 +7,9 @@
     <env name="SIMPLETEST_IGNORE_DIRECTORIES" value="vendor,${drupal.root}"/>
     <env name="SIMPLETEST_DB" value="mysql://${drupal.database.user}:${drupal.database.password}@${drupal.database.host}:${drupal.database.port}/${drupal.database.name}"/>
     <env name="MINK_DRIVER_ARGS_WEBDRIVER" value='["${selenium.browser}", null, "${selenium.host}:${selenium.port}/wd/hub"]'/>
+    <env name="DTT_BASE_URL" value="${drupal.base_url}"/>
+    <env name="DTT_MINK_DRIVER_ARGS" value='["${selenium.browser}", null, "${selenium.host}:${selenium.port}/wd/hub"]'/>
+    <env name="SYMFONY_DEPRECATIONS_HELPER" value='disabled'/>
   </php>
   <testsuites>
     <testsuite name="unit">
@@ -23,6 +26,14 @@
     <testsuite name="functional-javascript">
       <directory>./tests/</directory>
       <directory>./modules/*/tests/</directory>
+    </testsuite>
+    <testsuite name="existing-site">
+      <directory>./modules/**/tests/src/ExistingSite</directory>
+      <directory>./tests/src/ExistingSite</directory>
+    </testsuite>
+    <testsuite name="existing-site-javascript">
+      <directory>./modules/**/tests/src/ExistingSiteJavascript</directory>
+      <directory>./tests/src/ExistingSiteJavascript</directory>
     </testsuite>
   </testsuites>
 </phpunit>
