Separate runner command for the testing settings.php fix.

--- a/runner.yml.dist
+++ b/runner.yml.dist
@@ -32,12 +32,15 @@ commands:
     - { task: "run", command: "setup:phpunit" }
     # Temporarily remove a non-supported contrib submodule.
     - { task: "remove", file: "build/modules/contrib/admin_toolbar/admin_toolbar_search" }
+
+  drupal:testing-setup:
     - task: "append"
       file: "build/sites/default/settings.php"
       text: |
         if (file_exists($app_root . '/' . $site_path . '/settings.testing.php')) {
           include $app_root . '/' . $site_path . '/settings.testing.php';
         }
+
   setup:phpunit:
     - { task: "process", source: "phpunit.xml.dist", destination: "phpunit.xml" }
   drupal:phpcs:
