--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,8 @@ install:
 
 before_script:
   - docker-compose exec -u www-data php ./vendor/bin/run drupal:site-install
+  - docker-compose exec -u root php chmod -R 775 build/sites/default
+  - docker-compose exec php ./vendor/bin/run drupal:testing-setup
   # Export the DB from the installation into a folder so it can be used by tests.
   - docker-compose exec -u www-data php ./vendor/bin/drush sql-dump --result-file=sites/default/files/test.sql
 
