Creating an overridable BPost client factory.

--- a/modules/commerce_bpost_pickup/commerce_bpost_pickup.info.yml
+++ b/modules/commerce_bpost_pickup/commerce_bpost_pickup.info.yml
@@ -1,6 +1,6 @@
-name: Commerce BPost Pickup
+name: 'Commerce BPost Pickup Point'
 type: module
-description: 'Provides the Bpost pickup functionality'
+description: 'Provides the Bpost pickup point functionality'
 package: Commerce
 core_version_requirement: ^9
 dependencies:
