--- a/commerce_bpost.info.yml
+++ b/commerce_bpost.info.yml
@@ -1,4 +1,4 @@
-name: Commerce BPost
+name: 'Commerce BPost'
 type: module
 description: 'Integrates with Bpost shipping manager'
 package: Commerce
