--- a/commerce_bpost.services.yml
+++ b/commerce_bpost.services.yml
@@ -18,3 +18,6 @@ services:
     arguments: ['@logger.factory', '@messenger']
     tags:
       - { name: event_subscriber }
+
+  commerce_bpost.client_factory:
+    class: Drupal\commerce_bpost\BpostClientFactory
