--- a/commerce_bpost.info.yml
+++ b/commerce_bpost.info.yml
@@ -2,7 +2,7 @@ name: 'Commerce BPost'
 type: module
 description: 'Integrates with Bpost shipping manager'
 package: Commerce
-core_version_requirement: ^9
+core_version_requirement: ^8.8 || ^9
 dependencies:
   - commerce:commerce_shipping
   - commerce:commerce_price
