--- a/modules/commerce_bpost_pickup/commerce_bpost_pickup.info.yml
+++ b/modules/commerce_bpost_pickup/commerce_bpost_pickup.info.yml
@@ -2,7 +2,7 @@ name: 'Commerce BPost Pickup Point'
 type: module
 description: 'Provides the Bpost pickup point functionality'
 package: Commerce
-core_version_requirement: ^9
+core_version_requirement: ^8.8 || ^9
 dependencies:
   - commerce_bpost:commerce_bpost
   - drupal:leaflet
