--- a/modules/commerce_bpost_pickup/tests/modules/commerce_bpost_pickup_test/commerce_bpost_pickup_test.info.yml
+++ b/modules/commerce_bpost_pickup/tests/modules/commerce_bpost_pickup_test/commerce_bpost_pickup_test.info.yml
@@ -2,6 +2,6 @@ name: Commerce BPost Pickup Test
 type: module
 description: 'Test module for Commerce Bpost Pickup'
 package: Testing
-core_version_requirement: ^9
+core_version_requirement: ^8.8 || ^9
 dependencies:
   - commerce_bpost:commerce_bpost_pickup
