--- a/tests/modules/commerce_bpost_test/commerce_bpost_test.info.yml
+++ b/tests/modules/commerce_bpost_test/commerce_bpost_test.info.yml
@@ -2,6 +2,6 @@ name: 'Commerce BPost Test'
 type: module
 description: 'Test module for Commerce Bpost'
 package: Testing
-core_version_requirement: ^9
+core_version_requirement: ^8.8 || ^9
 dependencies:
   - commerce_bpost:commerce_bpost
