Moving from existing site tests to functional javascript tests.

--- a/modules/commerce_bpost_pickup/tests/modules/commerce_bpost_pickup_test/commerce_bpost_pickup_test.info.yml
+++ b/modules/commerce_bpost_pickup/tests/modules/commerce_bpost_pickup_test/commerce_bpost_pickup_test.info.yml
@@ -1,7 +1,9 @@
-name: Commerce BPost Pickup Test
+name: 'Commerce BPost Pickup Test'
 type: module
 description: 'Test module for Commerce Bpost Pickup'
 package: Testing
 core_version_requirement: ^8.8 || ^9
+
 dependencies:
   - commerce_bpost:commerce_bpost_pickup
+  - commerce_bpost:commerce_bpost_test
