--- a/commerce_bpost.info.yml
+++ b/commerce_bpost.info.yml
@@ -4,7 +4,7 @@ description: 'Integrates with Bpost shipping manager'
 package: Commerce
 core_version_requirement: ^8.8 || ^9
 dependencies:
-  - commerce:commerce_shipping
   - commerce:commerce_price
   - commerce:commerce_checkout
+  - commerce_shipping:commerce_shipping
   - drupal:telephone
