--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,12 @@
         "cweagans/composer-patches": "~1.4",
         "dealerdirect/phpcodesniffer-composer-installer": "^0.6.2",
         "drupal-composer/drupal-scaffold": "^2.2",
-        "drupal/admin_toolbar": "2.x-dev",
+        "drupal/admin_toolbar": "^3",
         "drupal/core-dev": " ^8.8 || ^9",
-        "drupal/devel_entity_updates": "3.x-dev",
+        "drupal/devel_entity_updates": "^3",
         "drupal/leaflet": "2.1.7",
         "drush/drush": "^10",
-        "openeuropa/task-runner": "~1.0-beta2",
+        "openeuropa/task-runner": "~1.0-beta6",
         "weitzman/drupal-test-traits": "dev-master",
         "phpspec/prophecy-phpunit": "^2.0"
     },
